--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -2251,6 +2251,45 @@ audio{
 }
 
 
+//CSS animate number
+#section-counter{
+    position: relative;
+    z-index: -1; 
+    margin-top: 40px;
+}
+.ftco-counter {
+    padding: 6em 0;
+    .container{
+        display: flex;
+        column-gap: 50px;
+        justify-content: space-around   ;
+        align-items: center;
+        .item{
+            .text{
+                text-align: center;
+                strong.number {
+                    font-weight: 500;
+                    font-size: 40px;
+                    color: #000000;
+                    display: block;
+                }
+                span {
+                    display: block;
+                    font-size: 16px;
+                    color: rgba(0, 0, 0, 0.8);
+                }
+            }
+        }
+    }
+   
+}
+.img{
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+
 //CSS load content when scrolling
 .load-when-scrolling{
     margin-top: 40px;
@@ -2312,5 +2351,7 @@ audio{
         }
     }
 }
+
+
 
 
