--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2788,6 +2788,9 @@ audio {
   position: relative;
   z-index: -1;
   margin-top: 40px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .ftco-counter {
@@ -2815,59 +2818,24 @@ audio {
   color: rgba(0, 0, 0, 0.8);
 }
 
-.img {
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-}
-
 .load-when-scrolling {
   margin-top: 40px;
   padding: 30px;
   background-color: black;
+  color: red;
 }
-@keyframes fadeInUp {
+@keyframes fadeinup {
   0% {
     opacity: 0;
     visibility: hidden;
-    transform: translate3d(0, 40px, 0);
+    transform: translate3d(0, 80px, 0);
   }
-  to {
+  100% {
     visibility: visible;
     opacity: 1;
     transform: none;
   }
 }
-.load-when-scrolling ul .ftco-animate {
-  opacity: 0;
-  visibility: hidden;
-}
-.load-when-scrolling ul .fadeInUp {
-  animation-name: fadeInUp;
-}
-.load-when-scrolling ul .ftco-animated {
-  animation-duration: 4s;
-  animation-fill-mode: both;
-}
-.load-when-scrolling ul li {
-  list-style: none;
-  margin: 0 10px 0 0;
-  display: inline-block;
-}
-.load-when-scrolling ul li a {
-  height: 40px;
-  width: 40px;
-  display: block;
-  float: left;
-  background: rgba(255, 255, 255, 0.05);
-  border-radius: 50%;
-  position: relative;
-}
-.load-when-scrolling ul li a i {
-  color: #fff;
-  position: absolute;
-  font-size: 16px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.load-when-scrolling .scroll-element.animate {
+  animation: fadeinup 3s;
 }/*# sourceMappingURL=style.css.map */
