--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2838,4 +2838,74 @@ audio {
 }
 .load-when-scrolling .scroll-element.animate {
   animation: fadeinup 3s;
-}/*# sourceMappingURL=style.css.map */
+}
+
+.content-whatpeoplesayaboutus-bottom {
+  margin-top: 80px;
+}
+.content-whatpeoplesayaboutus-bottom .carousel-item-wrap {
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: row;
+}
+.content-whatpeoplesayaboutus-bottom .carousel-item-wrap .item {
+  max-width: 304px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 30px;
+  text-align: center;
+  box-shadow: 0px 10px 30px 0px rgba(153, 153, 153, 0.2);
+}
+.content-whatpeoplesayaboutus-bottom .carousel-item-wrap .item div {
+  width: 129px;
+  height: 129px;
+  position: relative;
+  margin: auto;
+}
+.content-whatpeoplesayaboutus-bottom .carousel-item-wrap .item div img {
+  width: 100%;
+  height: 100%;
+  margin: auto;
+}
+.content-whatpeoplesayaboutus-bottom .carousel-item-wrap .item div .quote {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 51px;
+  height: 51px;
+}
+.content-whatpeoplesayaboutus-bottom .carousel-item-wrap .item p:first-of-type {
+  font-size: small;
+  color: black;
+  margin-top: 20px;
+}
+.content-whatpeoplesayaboutus-bottom .carousel-item-wrap .item p:last-of-type {
+  font-size: small;
+  color: black;
+  margin-top: 20px;
+}
+.content-whatpeoplesayaboutus-bottom .carousel-item-wrap .item a {
+  width: 9px;
+  height: 9px;
+  background-color: black;
+  margin: auto;
+  border-radius: 50%;
+}
+.content-whatpeoplesayaboutus-bottom .carousel-item-wrap .item h6 {
+  font-weight: bold;
+  color: black;
+  margin-top: 20px;
+}
+.content-whatpeoplesayaboutus-bottom .carousel-nav {
+  position: absolute;
+  color: green;
+  border-radius: 50%;
+  background-color: black;
+}
+.content-whatpeoplesayaboutus-bottom .carousel-nav-left {
+  left: 0;
+}
+.content-whatpeoplesayaboutus-bottom .carousel-nav-right {
+  right: 0;
+}
