--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2909,3 +2909,28 @@ audio {
 .content-whatpeoplesayaboutus-bottom .carousel-nav-right {
   right: 0;
 }
+
+.overlay-item {
+  margin: auto;
+  margin-top: 40px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: white;
+  width: 300px;
+  height: 300px;
+  padding-top: 40px;
+  padding-left: 40px;
+  position: relative;
+}
+.overlay-item .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.overlay-item h2, .overlay-item h4 {
+  filter: brightness(1);
+}
