--- a/assets/scss/_variable.scss
+++ b/assets/scss/_variable.scss
@@ -1,3 +1,5 @@
 $fontJost : "Jost";
+$fontCourgette : "Courgette";
 $a-hover: rgb(182, 180, 180);
 $contact-a: rgb(97, 97, 97);
+$primary-green: #CF7976;
