--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -2662,3 +2662,127 @@ audio{
       background-color: #DDD3D3;
     }
   }
+
+// contact
+.contact{
+    max-width: 1400px;
+    margin: auto;
+    padding: 50px; 
+    padding-bottom: 80px;
+    padding-top: 80px;
+    @include font($fontCourgette);
+    h4{
+        color: $primary-green;
+        font-size: 28px;
+        text-align: center; 
+    }
+    h1{
+        text-align: center;
+        font-weight: 600;
+        margin-top: 20px;
+    }
+    .contact-content{
+        display: flex;
+        column-gap: 20px;
+        margin-top: 60px;
+        .item1{
+            width: 40%;
+            .item{
+                height: 116px;
+                max-width: 380px;
+                display: flex;
+                justify-content: flex-start;
+                column-gap: 10px;
+                img{
+                    width: 24px;
+                    height: 24px;
+                }
+                .text{
+                    h5{
+                        @include font($fontCourgette);
+                        font-weight: bold;
+                        color: $primary-green;
+                    }
+                    h6{
+                        @include font($fontJost);
+                        font-size: 17px;
+                    }
+                    #res{
+                        display: none;
+                    }
+                }
+            }
+        }
+        .item2{
+            width: 60%;
+            .content-getintouch-center{
+                width: 100%;
+                input{
+                    border-radius: 4px;
+                    padding-left: 16px;
+                    height: 48px;
+                    border: 1px solid gray;
+                    &:focus{
+                        border: 1px solid $primary-green;
+                        outline: 1px solid $primary-green;
+                    }
+                }
+                .getintouch-item1{
+                    display: flex;
+                    column-gap: 24px;
+                    justify-content: space-between;
+                    width: 100%;
+                    input{
+                        flex: 1;
+                    }
+                }
+                .getintouch-item2{
+                    margin-top: 20px;
+                    width: 100%;
+                    input{
+                       display: block;
+                        width: 100%;
+                    }
+                }
+                .getintouch-item3{
+                    margin-top: 20px;
+                    textarea{
+                        width: 100%;
+                        height: 164px;
+                        border-radius: 4px;
+                        resize: none;
+                        padding-left: 16px;
+                        padding-top: 12px;
+                        border: 1px solid gray;
+                        &:focus{
+                            border: 1px solid $primary-green;
+                            outline: 1px solid $primary-green;
+                        }
+                    }
+                }
+            }
+            .content-getintouch-bottom{
+                display: flex;
+                justify-content: center;
+                button{
+                    margin-top: 41px;
+                    height: 59px;
+                    background-color: $primary-green;
+                    width: 181px;
+                    color: #fff;
+                    @include font($fontCourgette);
+                    font-size: 18px;
+                    border-radius: 6px;
+                    transition: 0.5s;
+                    &:hover{
+                        background-color: black;
+                    }
+                    img{
+                        width: 14px;
+                        height: 13px;
+                    }
+                }
+            }
+        }
+    }
+}
