--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3161,3 +3161,127 @@ audio {
   transform: rotate(-2deg);
   background-color: #DDD3D3;
 }
+
+.contact {
+  max-width: 1400px;
+  margin: auto;
+  padding: 50px;
+  padding-bottom: 80px;
+  padding-top: 80px;
+  font-family: "Courgette";
+}
+.contact h4 {
+  color: #CF7976;
+  font-size: 28px;
+  text-align: center;
+}
+.contact h1 {
+  text-align: center;
+  font-weight: 600;
+  margin-top: 20px;
+}
+.contact .contact-content {
+  display: flex;
+  -moz-column-gap: 20px;
+       column-gap: 20px;
+  margin-top: 60px;
+}
+.contact .contact-content .item1 {
+  width: 40%;
+}
+.contact .contact-content .item1 .item {
+  height: 116px;
+  max-width: 380px;
+  display: flex;
+  justify-content: flex-start;
+  -moz-column-gap: 10px;
+       column-gap: 10px;
+}
+.contact .contact-content .item1 .item img {
+  width: 24px;
+  height: 24px;
+}
+.contact .contact-content .item1 .item .text h5 {
+  font-family: "Courgette";
+  font-weight: bold;
+  color: #CF7976;
+}
+.contact .contact-content .item1 .item .text h6 {
+  font-family: "Jost";
+  font-size: 17px;
+}
+.contact .contact-content .item1 .item .text #res {
+  display: none;
+}
+.contact .contact-content .item2 {
+  width: 60%;
+}
+.contact .contact-content .item2 .content-getintouch-center {
+  width: 100%;
+}
+.contact .contact-content .item2 .content-getintouch-center input {
+  border-radius: 4px;
+  padding-left: 16px;
+  height: 48px;
+  border: 1px solid gray;
+}
+.contact .contact-content .item2 .content-getintouch-center input:focus {
+  border: 1px solid #CF7976;
+  outline: 1px solid #CF7976;
+}
+.contact .contact-content .item2 .content-getintouch-center .getintouch-item1 {
+  display: flex;
+  -moz-column-gap: 24px;
+       column-gap: 24px;
+  justify-content: space-between;
+  width: 100%;
+}
+.contact .contact-content .item2 .content-getintouch-center .getintouch-item1 input {
+  flex: 1;
+}
+.contact .contact-content .item2 .content-getintouch-center .getintouch-item2 {
+  margin-top: 20px;
+  width: 100%;
+}
+.contact .contact-content .item2 .content-getintouch-center .getintouch-item2 input {
+  display: block;
+  width: 100%;
+}
+.contact .contact-content .item2 .content-getintouch-center .getintouch-item3 {
+  margin-top: 20px;
+}
+.contact .contact-content .item2 .content-getintouch-center .getintouch-item3 textarea {
+  width: 100%;
+  height: 164px;
+  border-radius: 4px;
+  resize: none;
+  padding-left: 16px;
+  padding-top: 12px;
+  border: 1px solid gray;
+}
+.contact .contact-content .item2 .content-getintouch-center .getintouch-item3 textarea:focus {
+  border: 1px solid #CF7976;
+  outline: 1px solid #CF7976;
+}
+.contact .contact-content .item2 .content-getintouch-bottom {
+  display: flex;
+  justify-content: center;
+}
+.contact .contact-content .item2 .content-getintouch-bottom button {
+  margin-top: 41px;
+  height: 59px;
+  background-color: #CF7976;
+  width: 181px;
+  color: #fff;
+  font-family: "Courgette";
+  font-size: 18px;
+  border-radius: 6px;
+  transition: 0.5s;
+}
+.contact .contact-content .item2 .content-getintouch-bottom button:hover {
+  background-color: black;
+}
+.contact .contact-content .item2 .content-getintouch-bottom button img {
+  width: 14px;
+  height: 13px;
+}
